Closed Bug 12166 Opened 26 years ago Closed 26 years ago

JARs(or XPIs) aren't deleted after install & are locked by app

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect, P3)

All
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: cathleennscp, Assigned: cathleennscp)

Details

1. trigger any jar (try http://jimbob/jars/addsubcomp_3files.jar) 2. after it's done install, 3 files are installed under /null/regname 3. check your system's TEMP directory, notice downloaded JAR file still remains. 4. try to delete it manually, and it's locked by apprunner We need to make sure the JAR file is deleted after installation is finished.
Target Milestone: M10
Assignee: cathleen → dveditz
Dan you got the fixes on your machine. Can you check it in?
oops, my previous comment was ment for another bug... (bug 12242). Never mind. reassigning this bug to you, per today's bug meeting.
Assignee: dveditz → cathleen
CleanUp() is not being called after install completes, thus JAR file pointers are not freed up at the end.
checked in fix to free up file handle, so JAR/XPI can be deleted after install completes.
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Jar file can now be deleted after install process completes or fails. part II fix checked in today.
Status: RESOLVED → VERIFIED
Build 9/17/99 Good on all platforms.
Bulk move of XPInstall (component to be deleted) bugs to Installer: XPInstall Engine
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.