partial fix for bug 12166, where cleanup() is not getting called after install completes, thus file pointer for JAR/XPI files are not freed up afterwards.